# typebuf

./: README.md  pyproject.toml  tasks.py
.circleci/: config.yml
examples/: address.py  address.ts  types.yaml
scripts/: cli.py
tests/: test_fs.py  test_lib.py  test_transformers.py  test_yaml.yaml  types.yaml
typebuf/: __init__.py  fs.py  lib.py
typebuf/models/: ir.py  typedefinition.py  typefield.py
typebuf/transformers/: __init__.py  base.py  python.py  python_pydantic.py  typescript.py
